--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      @import url('https://fonts.cdnfonts.com/css/alphabetsoup');
+    </style>
     <script>
       const app = window.Telegram.WebApp;
       app.ready();
