--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <script src="/telegram-web-app.js"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=AlphabetSoup:wght@900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -53,7 +54,7 @@
     <div id="root"></div>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
-      @import url('https://fonts.cdnfonts.com/css/alphabetsoup');
+
       body {
         font-family: Roboto Flex,sans-serif;
         -webkit-user-select: none; /* Chrome, Safari, Opera */
