--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MBZ4N7ZP1T"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-MBZ4N7ZP1T');
+    </script>
     <script>
       const app = window.Telegram.WebApp;
       app.ready();
